tests/errors/cases/const_00_runtime.t

int get_value() {
    return 81;
}

void main() {
    const int a = get_value();
}